// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tablink renders 1`] = `
<a
  className="Container-j1xqi2-0 iXKPxI"
/>
`;

exports[`Tablink renders Href 1`] = `
<a
  className="Container-j1xqi2-0 iXKPxI"
  href="www.google.com"
/>
`;

exports[`Tablink renders count 1`] = `
<a
  className="Container-j1xqi2-0 iXKPxI"
>
  <span
    className="TabLink__CountWrapper-u6qu8y-1 gxKhUP"
  >
    2
  </span>
</a>
`;

exports[`Tablink renders element left 1`] = `
<a
  className="Container-j1xqi2-0 iXKPxI"
>
  <div
    className="TabLink__ElementLeftWrapper-u6qu8y-0 fCvohn"
  >
    <span>
      Element
    </span>
  </div>
</a>
`;

exports[`Tablink renders isTop 1`] = `
<a
  className="Container-j1xqi2-0 jOsmmv"
/>
`;

exports[`Tablink renders size 1`] = `
<a
  className="Container-j1xqi2-0 hQntez"
  size="small"
/>
`;
